--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <!--senha primeira aula: #RumoAoPróximoNível-->
-<html>
+<html lang="pt_BR">
   <head>
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jr Pimenta - Top demais - DoWhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
