--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jr Pimenta - Top demais - DoWhile 2021</title>
+    <title>Jr Pimenta - Crachá Virtual</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -71,29 +71,7 @@
       </div>
     </main>
 
-    <script>
-
-      const links = {
-        github: 'Jrp1m3n7a',
-        youtube: 'UCtcVKjdz2ps0w3yxDcOK46A',
-        facebook: 'junior.pimenta.92',
-        twitter: 'juniorpimenta',
-        instagram: 'jun1orp1m3n7a'
-      }
-
-      function changeSociaMLinks(){
-
-        for(let li of socialLinks.children) {
- //        const social = li.getAttribute('class')
-          alert(li.children.href)
-        }
-
-      }
-
-  //    changeSociaMLinks()
-
-
-    </script>
+    <script>src="main.js"</script>
 
   </body>
 </html>
