--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<!--senha primeira aula: #RumoAoPróximoNível-->
+
 <html lang="pt_BR">
   <head>
-    
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jr Pimenta - Crachá Virtual</title>
+
+    <title>Jr Pimenta - Crachá Virtual - DoWhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -23,41 +24,34 @@
           <span>
             <img src="images/selo.svg" alt="Selo Rocketseat" />
           </span>
-          <img src="images/eu.jpg" alt="Foto Pessoal" />
+          <img id="imgUser" src="images/eu.jpg" alt="Foto Pessoal" />
         </div>
 
         <h1 id="userName">Junior Pimenta</h1>
-        <a
-          href="https://github.com/Jrp1m3n7a"
-          target="_blank"
-        >
+        <a id="userLink" href="https://github.com/Jrp1m3n7a" target="_blank">
           <img src="images/GITHUB.svg" alt="Ícone GitHub" />
-          JrPimenta</a
+          <span id="gitUser">JrPimenta</span></a
         >
-        <p>Futuro desenvolvedor em formação</p>
+        <p id="userBio">Futuro desenvolvedor em formação</p>
 
         <ul id="socialLinks">
-             <a href="">
           <li class="youtube">
-            <a 
-            href="https://www.youtube.com/channel/UCtcVKjdz2ps0w3yxDcOK46A" 
-            target="_blank"
+            <a
+              href="https://www.youtube.com/channel/UCtcVKjdz2ps0w3yxDcOK46A"
+              target="_blank"
             >
               <img src="images/YOUTUBE.svg" alt="Logo Youtube" />
+            </a>
           </li>
           <li class="instagram">
-            <a 
-            href="https://instagram.com/jun1orp1m3n7a" 
-            target="_blank"
-            >
+            <a href="https://instagram.com/jun1orp1m3n7a" target="_blank">
               <img src="images/INSTAGRAM.svg" alt="Logo instagram" />
+            </a>
           </li>
           <li class="twitter">
-            <a 
-            href="https://twitter.com/juniorpimenta" 
-            target="_blank"
-            >
+            <a href="https://twitter.com/juniorpimenta" target="_blank">
               <img src="images/TWITER.svg" alt="Logo twitter" />
+            </a>
           </li>
           <li class="facebook">
             <a
@@ -70,8 +64,6 @@
         </ul>
       </div>
     </main>
-
-    <script>src="main.js"</script>
-
+    <script src="main.js"></script>
   </body>
 </html>
