--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="avatar">
           <span>
-            <img src="images/selo.svg" alt="Selo Rocketseat" />
+            <img src="images/SELO.svg" alt="Selo Rocketseat" />
           </span>
           <img id="imgUser" src="images/eu.jpg" alt="Foto Pessoal" />
         </div>
