--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Jr Pimenta - Crachá Virtual - DoWhile 2021</title>
+    <title>Jr Pimenta - Crachá Virtual</title>
 
     <link rel="stylesheet" href="style.css" />
 
